Using explicit types instead of var in tests